--- a/TestUnitariosCalculadora/TestUnitariosCalculadora.csproj
+++ b/TestUnitariosCalculadora/TestUnitariosCalculadora.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProyectoCalculadora\calculadora.csproj" />
+  </ItemGroup>
+
 </Project>
